# verse-of-south-backend

./: .dockerignore  Cargo.toml  DockerFile  Dockerfile  EnvGen.hs  README.md  docker-compose.yml  readme.md
deploy/: nginx.conf
migrations/2019-03-10-082711_create_posts/: down.sql  up.sql
migrations/2019-03-10-082957_create_readers/: down.sql  up.sql
migrations/2019-03-10-083219_create_comments/: up.sql
migrations/2019-03-10-084808_views/: down.sql  up.sql
migrations/2019-03-11-143919_create_tags/: down.sql  up.sql
migrations/2019-04-05-152054_create_archive_view/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/database/: mod.rs  util.rs
src/database/models/: comment.rs  mod.rs  post.rs  tag.rs  types.rs
src/web/: mod.rs
src/web/handlers/: comment.rs  index.rs  mod.rs  post.rs
src/web/models/: comment.rs  detailed_post.rs  index_post.rs  mod.rs  post.rs
src/wrapper/: converting.rs  messages.rs  mod.rs
src/wrapper/actors/: Cacher.rs  Index.rs  database.rs  index.rs  mod.rs  new_post_actor.rs  pgdatabase.rs  post_actor.rs  rootactor.rs  search_actor.rs
src/wrapper/models/: post.rs
src/wrapper/repo/: MockPostRepository.rs  PostLike.rs  PostRepository.rs  Repository.rs  mock_post_repository.rs  mod.rs  repository.rs
