[package]
name = "vos"
version = "0.1.2"
authors = ["hillium <maruruku@stu.csust.edu.cn>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
actix = "0.7.9"
diesel = { version = "1.4", features = ["postgres", "chrono"]}
tokio = "0.1"
futures = "0.1"
dotenv = "0.13"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
env_logger = "0.5"
log = "0.4.6"